z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ sup {
   font-size: 0.7rem;
   margin-top: -0.5rem;
   width: 100%;
-  z-index: 2;
+  z-index: 41;
 }
 
 /*———————————————————————————————————————————————————————————————*/
@@ -119,7 +119,7 @@ sup {
   width: 100%;
   background-color: var(--bg-color);
   box-shadow: 0px 0px 15px 6px rgba(0, 0, 0, 0.15);
-  z-index: 2;
+  z-index: 3;
   padding-top: 0.2rem;
   padding-bottom: 0.2rem;
   border: 1px solid rgba(0, 0, 0, 0.18);
